--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 log/*.log
 pkg/
 *.lock
+Gemfile.lock
 spec/dummy/db/*.sqlite3
 spec/dummy/log/*.log
 spec/dummy/tmp/
 spec/dummy/.sass-cache
+*.gem
